--- a/src/components/timeline/timeline.scss
+++ b/src/components/timeline/timeline.scss
@@ -5,31 +5,27 @@
 
   display: flex;
   flex-direction: column;
-  height: auto;
-
-  background-color: $timeline-background;
-}
-
-.timeline .timeline__content {
-  width: 100%;
-  height: auto;
-
-  display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: auto;
 
-  padding-top: 80px;
   padding-bottom: 60px;
 
+  background-color: $timeline-background;
+
   .header {
-    flex: 1 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
-    width: 100%;
+    padding: 20px;
+    padding-top: 80px;
+    padding-bottom: 60px;
+
     text-align: center;
-    padding-bottom: 30px;
 
-    &__title {
+    .title {
       @include title;
       font-size: 40px;
       color: $timeline-title;
@@ -37,77 +33,133 @@
       margin-bottom: 20px;
     }
 
-    &__subtitle {
+    .subtitle {
       @include title;
       color: $timeline-subtitle;
     }
   }
+
+  .timeline-content {
+    display: flex;
+    flex-direction: column;
+
+    position: relative;
+    margin: auto;
+    width: auto;
+
+    margin: 40px;
+    margin-bottom: 0;
+
+    .mainLine {
+      position: absolute;
+      top: 0;
+      left: -1px;
+      width: 2px;
+      height: 100%;
+      background-color: #063d4b;
+    }
+
+    .timeline-item {
+      position: relative;
+      display: flex;
+      align-items: flex-start;
+      justify-content: flex-start;
+      flex-direction: row;
+
+      width: 100%;
+
+      &:not(:last-child) {
+        margin-bottom: 80px;
+      }
+
+      &:last-child {
+        margin-bottom: 80px;
+      }
+
+      .point {
+        display: block;
+        width: 16px;
+        height: 16px;
+        background-color: #063d4b;
+        border: 1px solid #063d4b;
+        border-radius: 50%;
+        position: absolute;
+        top: (-16px / 2);
+        left: (-16px / 2);
+      }
+
+      .metadata {
+        margin-left: 60px;
+        margin-top: -16px;
+
+        .icon {
+          width: 130px;
+          padding-bottom: 12px;
+
+          &--ceremony {
+
+          }
+
+          &--cruise {
+            width: 150px;
+          }
+
+          &--party {
+
+          }
+        }
+
+        .title {
+          @include title;
+          margin-bottom: 20px;
+        }
+      }
+    }
+  }
 }
 
-.timeline .item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
-  position: relative;
-  color: white;
-
-  &:not(last-item) {
-    padding: 30px;
-  }
-
-  &__image {
-    position: relative;
-    width: 200px;
-    height: 200px;
-
-    &__asset {
-      width: 200px;
-      height: 200px;
-      border-radius: 50%;
-
-      background-position: center center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-color: darken(#E3E3E3, 20%);
-    }
-  }
-
-  &__text {
-    padding-top: 20px;
-
-    &__title {
-      @include title;
-      color: $timeline-title;
-
-      padding-bottom: 20px;
-    }
-
-    &__description {
-      position: relative;
-    }
-  }
+.link {
+  text-decoration: underline;
+  font-weight: bold;
 }
 
 @media (min-width: 600px) {
-  .timeline__content {
-    .item {
-      flex-direction: row;
-      align-items: start;
-      justify-content: start;
-    }
-
-    .item__text {
-      padding-left: 60px;
-    }
+  .timeline-content {
+    max-width: 500px;
   }
 }
 
-@media (min-width: 800px) {
-  .timeline__content {
-    .item {
-      max-width: 800px;
+@media (min-width: 1000px) {
+  .timeline-content {
+    .mainLine {
+      left: (130px - 1px) !important;
+    }
+
+    .timeline-item {
+      margin-left: 130px;
+      max-width: 500px;
+
+      .metadata {
+        .icon {
+          position: absolute;
+          left: 0;
+          margin-left: -200px;
+          margin-top: -10px;
+          padding-bottom: 0 !important;
+
+          &--ceremony {
+
+          }
+
+          &--cruise {
+            margin-top: -20px;
+          }
+
+          &--party {
+            margin-left: -180px;
+          }
+        }
+      }
     }
   }
 }
