--- a/src/components/cover/cover.scss
+++ b/src/components/cover/cover.scss
@@ -32,7 +32,7 @@
   height: 100%;
   min-height: 100vh;
 
-  background-image: url("../../assets/header-large.jpg");
+  background-image: url("../../assets/header-mobile.jpg");
 
   /* Background image is centered vertically and horizontally at all times */
   background-position: center center;
@@ -51,6 +51,18 @@
   /* Set a background color that will be displayed
     while the background image is loading */
   background-color: #000;
+}
+
+@media (min-width: 800px) {
+  .cover__background {
+    background-image: url("../../assets/header-large.jpg");
+  }
+}
+
+@media (min-width: 1000px) {
+  .cover__background {
+    background-image: url("../../assets/header-xlarge.jpg");
+  }
 }
 
 .cover__overlay {
