--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -93,6 +93,7 @@ body {
   color: color('main-fontColor');
   background-color: color('background');
   @include z-index(root);
+  scroll-behavior: smooth;
 }
 
 html {
