--- a/src/components/information/information.scss
+++ b/src/components/information/information.scss
@@ -49,12 +49,10 @@
 
 .contentItem__image {
   position: relative;
-  height: 300px;
-  width: 100%;
 
   &__asset {
-    height: 300px;
-    width: 100%;
+    max-width: 100%;
+    height: auto;
 
     margin: 0;
     background-position: center center;
@@ -97,6 +95,11 @@
 
     &:not(last-child) {
       margin-bottom: 6px;
+    }
+
+    &.inactive {
+      background: #b0ddd7;
+      cursor: not-allowed;
     }
   }
 }
