--- a/src/components/information/information.scss
+++ b/src/components/information/information.scss
@@ -93,8 +93,8 @@
     @include title;
     font-size: 16px;
 
-    &:not(last-child) {
-      margin-bottom: 6px;
+    &:not(:last-child) {
+      margin-bottom: 8px;
     }
 
     &.inactive {
@@ -125,21 +125,8 @@
       padding-top: 0;
     }
 
-    &:nth-child(odd) {
-      .contentItem__image {
-        order: 2;
-      }
-
-      .contentItem__metadata {
-        order: 1;
-        padding-right: 60px;
-      }
-    }
-
-    &:nth-child(even) {
-      .contentItem__metadata {
-        padding-left: 60px;
-      }
+    .contentItem__metadata {
+      padding-left: 60px;
     }
   }
 
