--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -130,3 +130,25 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+#timeline,
+#info,
+#rsvp {
+  position: relative;
+  border-top: 52px solid transparent;
+  margin: -30px 0 0;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+}
+
+#timeline:before,
+#info:before,
+#rsvp:before {
+  content: "";
+  position: absolute;
+  top: -2px;
+  left: 0;
+  right: 0;
+  border-top: 2px solid transparent;
+}
