--- a/src/components/cover/cover.scss
+++ b/src/components/cover/cover.scss
@@ -32,28 +32,28 @@
   height: 100%;
   min-height: 100vh;
 
-  background-image: url("../../assets/header-mobile.jpg");
+  background: url("../../assets/header-mobile.jpg") center/cover no-repeat;
 
   background-repeat: no-repeat;
   background-position: center center;
-  background-attachment: fixed;
+
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover !important;
+  background-size: cover;
 
   background-color: #000;
 }
 
 @media (min-width: 800px) {
   .cover__background {
-    background-image: url("../../assets/header-large.jpg");
+    background: url("../../assets/header-large.jpg") center/cover no-repeat;
   }
 }
 
 @media (min-width: 1000px) {
   .cover__background {
-    background-image: url("../../assets/header-xlarge.jpg");
+    background: url("../../assets/header-xlarge.jpg")  center/cover no-repeat;
   }
 }
 
