--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,82 +1,5 @@
 @import "./reset.scss";
-
-// Font family
-$font-family--fallback: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-$font-family--global: "Lora", $font-family--fallback;
-
-$colors: (
-  'main-fontColor':             rgba(#142E4B, 1),
-
-  'coupleIntro-background':     rgba(#F9D6C8, 1),
-  'coupleIntro-and':            rgba(#ED3124, 1),
-
-  'timeline-background':        rgba(#B0DDD7, 1),
-  'timeline-title':             rgba(#FFFFFF, 1),
-  'timeline-subtitle':          rgba(#142E4B, 1),
-
-  'information-title':          rgba(#ED3124, 1),
-
-  'rsvp-background':            rgba(#B0DDD7, 1),
-
-  'footerArea-background':     rgba(#F9D6C8, 1),
-  'footerArea-title':          rgba(#ED3124, 1),
-);
-
-/* Color variables */
-$main-fontColor: map-get($colors, 'main-fontColor');
-
-$coupleIntro-background: map-get($colors, 'coupleIntro-background');
-$coupleIntro-and: map-get($colors, 'coupleIntro-and');
-
-$timeline-background: map-get($colors, 'timeline-background');
-$timeline-title: map-get($colors, 'timeline-title');
-$timeline-subtitle: map-get($colors, 'timeline-subtitle');
-
-$information-title: map-get($colors, 'information-title');
-
-$rsvp-background: map-get($colors, 'rsvp-background');
-
-$footerArea-background: map-get($colors, 'footerArea-background');
-$footerArea-title: map-get($colors, 'footerArea-title');
-
-/* Mixins */
-@function color($key) {
-  @return map-get($colors, $key);
-}
-
-/* Z-index landscape */
-$z-index: (
-  spinner             : 100,
-  overlay             : 100,
-  menu-bar            : 101,
-  menu                : 50,
-  logo                : 10,
-  root                : 0,
-  behind              : -1,
-);
-
-@function z-index($key) {
-  @return map-get($z-index, $key);
-}
-
-@mixin z-index($key) {
-  z-index: z-index($key);
-}
-
-//**************
-// Title:
-// Karla, bold
-//**************
-// Body:
-// Lora, regular
-//**************
-
-@mixin title {
-  font-size: 30px;
-  font-family: "Karla", cursive;
-  font-weight: bold;
-  line-height: 1;
-}
+@import "./mixins.scss";
 
 html,
 body {
@@ -88,12 +11,29 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Lora", cursive, $font-family--global;
+  font-size: 12px;
   letter-spacing: 1px;
   line-height: 1.5;
   color: color('main-fontColor');
   background-color: color('background');
   @include z-index(root);
   scroll-behavior: smooth;
+
+  @media screen and (min-width: 600px) {
+    font-size: 13px;
+  }
+
+  @media screen and (min-width: 800px) {
+    font-size: 14px;
+  }
+
+  @media screen and (min-width: 1000px) {
+    font-size: 15px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+  }
 }
 
 html {
