--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -49,6 +49,8 @@ $z-index: (
   menu-bar            : 101,
   menu                : 50,
   logo                : 10,
+  input-arrow         : 2,
+  input               : 1,
   root                : 0,
   behind              : -1,
 );
