--- a/src/components/main-menu/main-menu.scss
+++ b/src/components/main-menu/main-menu.scss
@@ -4,6 +4,7 @@
   position: fixed;
   width: 100%;
   height: 100%;
+  top: 0;
   @include z-index(menu);
   pointer-events: none;
 
@@ -85,6 +86,8 @@
         flex-direction: row;
         align-items: center;
         justify-content: center;
+        white-space: nowrap;
+        padding-right: 6px;
 
         .back {
           margin-right: 6px;
