--- a/src/layouts/info/markdown.scss
+++ b/src/layouts/info/markdown.scss
@@ -8,13 +8,15 @@
 
 .content h1 {
   @include title;
-  padding-bottom: 10px;
+  padding-top: pxToRems(30);
+  padding-bottom: pxToRems(20);
 }
 
 .content h2 {
   @include title;
   font-size: pxToRems(20);
-  padding-bottom: 10px;
+  padding-top: pxToRems(15);
+  padding-bottom: pxToRems(15);
 }
 
 .content img {
@@ -23,4 +25,36 @@
   max-width: 600px;
   margin: 0 auto;
   padding: 20px 0;
+}
+
+.content ul {
+  list-style-type: disc;
+}
+
+.content a {
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.content strong {
+  font-weight: bold;
+}
+
+.content em {
+  text-decoration: underline;
+}
+
+.content .resp-container {
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%;
+
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
 }
