--- a/src/components/main-menu/main-menu.scss
+++ b/src/components/main-menu/main-menu.scss
@@ -107,12 +107,12 @@
   height: 100%;
   opacity: 0;
   visibility: hidden;
-  transition: opacity .35s, visibility .35s;
+  transition: opacity 330ms, visibility 330ms;
   overflow: hidden;
 
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
 
   pointer-events: all;
@@ -126,8 +126,9 @@
 
   &__item {
     @include title;
-
-    padding: 10px 0;
+    padding: 20px 0;
+    text-align: center;
+    cursor: pointer;
   }
 }
 
@@ -141,13 +142,6 @@
   .overlay {
     display: none !important;
   }
-
-  .main-menu {
-    .main-menu__bar {
-      // background-color: rgba(0, 0, 0, 0);
-      // border-bottom: 1px solid transparent;
-    }
-  }
 }
 
 @media (min-width: 800px) {
@@ -155,7 +149,6 @@
   .navigation-expanded {
     .navigation-item {
       font-size: pxToRems(20) !important;
-      // text-shadow: 2px 2px #FFF;
     }
   }
 }
