Fix bug with menu interaction not triggering scroll

--- a/src/components/main-menu/main-menu.scss
+++ b/src/components/main-menu/main-menu.scss
@@ -105,8 +105,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: 0;
-  visibility: hidden;
   transition: opacity 330ms, visibility 330ms;
   overflow: hidden;
 
@@ -116,13 +114,6 @@
   justify-content: center;
 
   pointer-events: all;
-
-  &.visible {
-    opacity: 1;
-    visibility: visible;
-    -webkit-animation: perspective 0.5s cubic-bezier(0.58, 0.27, 0.81, 0.57) forwards;
-            animation: perspective 0.5s cubic-bezier(0.58, 0.27, 0.81, 0.57) forwards;
-  }
 
   &__item {
     @include title;
@@ -160,4 +151,14 @@
       font-size: pxToRems(26) !important;
     }
   }
+}
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 330ms;
+}
+
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
 }
