Add TS lint bash script. Switch to more flexible SCSS color function.

--- a/src/components/cover/cover.scss
+++ b/src/components/cover/cover.scss
@@ -46,7 +46,7 @@
   -o-background-size: cover;
   background-size: cover;
 
-  background-color: #000;
+  background-color: #FFF;
 }
 
 @media (min-width: 800px) {
