--- a/src/App.scss
+++ b/src/App.scss
@@ -16,9 +16,7 @@
 .application,
 .main-route {
   width: 100%;
-  height: 100%;
-  height: 100vh;
-  height: vh(100);
+  @include fullheight;
 }
 
 .main-route {
