--- a/src/components/cover/cover.scss
+++ b/src/components/cover/cover.scss
@@ -5,9 +5,7 @@
   display: flex;
   flex-direction: column;
 
-  height: 100%;
-  height: 100vh;
-  height: vh(100);
+  @include fullheight;
 
   &__logo {
     @include z-index(logo);
@@ -36,9 +34,7 @@
   left: 0;
 
   width: 100%;
-  height: 100%;
-  height: 100vh;
-  height: vh(100);
+  @include fullheight;
 
   background: url("../../assets/header-mobile.jpg") center/cover no-repeat;
 
@@ -91,7 +87,5 @@
   left: 0;
 
   width: 100%;
-  height: 100%;
-  height: 100vh;
-  height: vh(100);
+  @include fullheight;
 }
