--- a/src/components/spinner/spinner.scss
+++ b/src/components/spinner/spinner.scss
@@ -17,9 +17,7 @@
   position: fixed;
 
   width: 100vw;
-  height: 100%;
-  height: 100vh;
-  height: vh(100);
+  @include fullheight;
 
   margin: 0 auto;
   display: flex;
