--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,9 +5,7 @@ html,
 body {
   position: absolute;
   width: 100%;
-  height: 100%;
-  height: 100vh;
-  height: vh(100);
+  @include fullheight;
   top: 0;
   left: 0;
   padding: 0;
