--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -104,3 +104,21 @@ $z-index: (
 @function vh($quantity) {
   @return calc(var(--vh, 1vh) * #{$quantity});
 }
+
+@mixin fullheight {
+  height: 100%;
+  height: 100vh;
+
+  @supports (color: var(--primary)) {
+    height: vh(100);
+  }
+}
+
+@mixin minFullheight {
+  min-height: 100%;
+  min-height: 100vh;
+
+  @supports (color: var(--primary)) {
+    min-height: vh(100);
+  }
+}
