--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,3 +1,4 @@
+@import "./mixins.scss";
 
 /* CSS RESETS */
 
@@ -141,9 +142,7 @@ dd {
 
 /* Set core body defaults */
 body {
-  min-height: 100%;
-  min-height: 100vh;
-  min-height: vh(100);
+  @include minFullheight;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
