--- a/src/components/cover/cover.scss
+++ b/src/components/cover/cover.scss
@@ -23,7 +23,7 @@
       margin-bottom: 80px;
       margin-bottom: 6vw;
       margin-bottom: calc(6vw + 40px);
-      width: 200px;
+      width: 160px;
     }
   }
 }
@@ -49,11 +49,21 @@
   background-color: #FFF;
 }
 
-@media only screen and (max-device-width: 812px) and (orientation: landscape) {
+@media only screen and (min-device-height: 20px)  and (max-device-height: 420px) and (orientation: landscape) {
   .cover__background,
   .cover {
     @supports (color: var(--primary)) {
-      height: vh(200) !important;
+      height: vh(120) !important;
+    }
+  }
+}
+
+@media (min-width: 600px) {
+  .cover {
+    &__logo {
+      &__content {
+        width: 200px;
+      }
     }
   }
 }
