Update due to Covid-19

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -71,6 +71,7 @@ html {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#infoExtra,
 #timeline,
 #info,
 #rsvp {
@@ -82,6 +83,7 @@ html {
   background-clip: padding-box;
 }
 
+#infoExtra:before,
 #timeline:before,
 #info:before,
 #rsvp:before {
