--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -9,6 +9,10 @@ $colors: (
   'coupleIntro-background':     #F9D6C8,
   'coupleIntro-and':            #ED3124,
 
+  'infoExtra-background':       #B0DDD7,
+  'infoExtra-title':            #FFFFFF,
+  'infoExtra-subtitle':         #142E4B,
+
   'timeline-background':        #B0DDD7,
   'timeline-title':             #FFFFFF,
   'timeline-subtitle':          #142E4B,
@@ -44,6 +48,10 @@ $main-fontColor: get-color('main-fontColor');
 
 $coupleIntro-background: get-color('coupleIntro-background');
 $coupleIntro-and: get-color('coupleIntro-and');
+
+$infoExtra-background: get-color('infoExtra-background');
+$infoExtra-title: get-color('infoExtra-title');
+$infoExtra-subtitle: get-color('infoExtra-subtitle');
 
 $timeline-background: get-color('timeline-background');
 $timeline-title: get-color('timeline-title');
